<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2025  The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/button_background"
    android:layout_marginTop="?attr/element_spacing"
    android:layout_marginBottom="?attr/element_spacing">
    <include layout="@layout/progress_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/currentProjectLayout"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/projectImageView"
                        android:contentDescription="@string/main_menu_continue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cropToPadding="true"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/shadow"
                        android:contentDescription="@string/main_menu_continue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#1a000000" />
                    
                    <ImageView
                        android:contentDescription="@string/main_menu_continue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editProject"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_edit_circle" />

                    <ImageView
                        android:id="@+id/playProject"
                        android:contentDescription="@string/main_menu_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/ic_play_circle" />

                    <ImageView
                        android:id="@+id/uploadProject"
                        android:contentDescription="@string/main_menu_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="75dp"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/ic_publish_circle" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/myProjectsTextView"
                    android:text="@string/main_menu_programs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/landing_page_icons"
                    app:drawableEndCompat="@drawable/ic_arrow_forward_vector"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="?attr/x_large"
                    android:background="@drawable/button_background_selector" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/myProjectsRecyclerView"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp"
                    android:clipToPadding ="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="LinearLayoutManager"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/featuredProjectsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingBottom="16dp"
                    android:paddingEnd="32dp"
                    android:paddingStart="20dp"
                    android:paddingTop="16dp"
                    android:text="@string/main_menu_web"
                    android:textColor="@color/landing_page_icons"
                    android:textSize="?attr/x_large"
                    app:drawableEndCompat="@drawable/ic_arrow_forward_vector" />

                <com.myradev.lunarcode.ui.recyclerview.AutoScrollableRecyclerView
                    android:id="@+id/featuredProjectsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="LinearLayoutManager" />

                <RelativeLayout
                    android:id="@+id/noInternetLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/noInternetImageView"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_wifi_off"
                        android:contentDescription="@string/no_internet_image" />

                    <TextView
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/noInternetImageView"
                        android:textColor="@color/no_internet_color"
                        android:fontFamily="sans-serif"
                        android:textSize="16sp"
                        android:text="@string/no_internet_connection"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoriesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:visibility="gone"
                    app:layoutManager="LinearLayoutManager" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newProjectFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/main_menu_new"
        android:src="@drawable/ic_plus"
        android:tint="@color/solid_white"
        android:theme="@style/Theme.AppCompat"
        app:backgroundTint="@color/action_button"
        app:elevation="10dp" />

    </RelativeLayout>
</LinearLayout>