...
    <string formatted="false" name="copy">Copy</string>
    <string formatted="false" name="delete">Delete</string>
    <string formatted="false" name="rename">Rename</string>
    <string formatted="false" name="merge">Merge</string>
    <string formatted="false" name="show_details">Show details</string>
    <string formatted="false" name="hide_details">Hide details</string>
    <string formatted="false" name="project_options">Project options</string>
    <string formatted="false" name="from_local">Add from local</string>
    <string formatted="false" name="sort_projects">Sort</string>
    <string formatted="false" name="unsort_projects">Unsort</string>
    <string formatted="false" name= "import_from_project">Select project to import from</string>

    <!-- New Dialog Titles -->
...
    <string formatted="false" name="error_screenshot_failed">Something went wrong while saving the preview image.</string>
    <string formatted="false" name="error_internet_connection">An unknown error occurred. Check your Internet connection.</string>
    <string formatted="false" name="error_project_compatibility">The project is not compatible with this version of the app.</string>
    <string formatted="false" name="error_outdated_version">This app version is outdated. Update now?</string>
    <string formatted="false" name="error_upload_project_with_default_name">You cannot upload a project with the name \"%s\".
        Please rename the project.</string>
    <string formatted="false" name="error_upload_default_project">You cannot upload an unmodified example project. Please
        change something and try again.</string>
    <string formatted="false" name="error_adding_brick">Something went wrong while adding this brick.</string>
    <string formatted="false" name="error_copying_brick">Something went wrong while copying this brick.</string>
    <string formatted="false" name="error_rename_incompatible_project">Renaming an incompatible project is not possible.</string>
    <string formatted="false" name="error_embroidery_file_export">Something went wrong while sharing the embroidery file.</string>
    <string formatted="false" name="error_embroidery_file_write">Something went wrong while writing the embroidery file.</string>
...
